# cloc-rs

./: Cargo.toml  Readme.md  package.json
projects/cloc-lib/: Cargo.toml
projects/cloc-lib/src/: lib.rs
projects/cloc-lib/src/utils/: expert.rs  lightning.rs  mod.rs  selector.rs
projects/colc-cli/: Cargo.toml
projects/digit-invariant/: Cargo.toml  readme.md
projects/digit-invariant/src/: lib.rs
projects/digit-invariant/src/munchausen/: hardcode.rs  mod.rs
projects/digit-invariant/src/narcissistic/: hardcode.rs  hardcode.wl  mod.rs  searcher.rs
projects/digit-invariant/src/narcissistic_number/: mod.rs
projects/digit-invariant/tests/: main.rs
projects/narcissistic-number/: Cargo.toml  readme.md  rustfmt.toml
projects/narcissistic-number/src/: lib.rs
projects/narcissistic-number/src/hardcode/: base10.rs  base16.rs  hardcode.wl  mod.rs
projects/narcissistic-number/src/munchausen/: hardcode.rs  mod.rs
projects/narcissistic-number/src/narcissistic/: display.rs  hardcode.rs  mod.rs  searcher.rs
projects/narcissistic-number/tests/: main.rs
projects/number-connect-factorial/: Cargo.toml  Readme.md
projects/number-connect-matrix/: Cargo.toml  Readme.md  export.wl  readme.md
projects/number-connect-matrix/data/: MatrixR2N2.wl  MatrixR2N2_1.csv
projects/number-connect-matrix/src/: main.rs
projects/vertical-multiplication/: Cargo.toml  readme.md
projects/vertical-multiplication/src/: lib.rs
projects/vertical-multiplication/src/core/: mod.rs  shift_add.rs
projects/vertical-multiplication/src/steps/: mod.rs  shift_add.rs  steps.rs
projects/vertical-multiplication/tests/: main.rs
projects/wolfram-debug/: Cargo.toml
projects/wolfram-debug/src/: lib.rs
