[package]
name = "digit-invariant"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Narcissistic number searcher"
repository = "https://github.com/oovm/number-connect"
documentation = "https://docs.rs/narcissistic"
readme = "Readme.md"
license = "MPL-2.0"
categories = ["algorithms"]
edition = "2021"

[dependencies]
num = "0.4.0"
narcissistic = "0.2.1"