[package]
name = "matrix-rank2"
version = "1.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/GalAster/carbon-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2018"
include = [
    "src/**/*",
    "Cargo.toml",
    "languages.dump",
    "themes.dump",
]


[dependencies]
cloc-lib = {path = "../cloc-lib" ,version = "0.1.0"}




