[package]
name = "debug"
publish = false
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/nyar-lang/Notedown-rs"
readme = "README.md"
license = "MPL-2.0"
edition = "2021"

[lib]
name = "debug"
crate-type = ["cdylib"]

[dependencies]
wolfram-library-link = "0.2.9"
num = "0.4.0"
